media/css/firefox/private_browsing/private-browsing.less
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

@import "../../sandstone/lib.less";

/*-------------------------------------------------------------------------*/
// Common

#wrapper {
    border-top: 2px solid #fff;
    background-color: @mozIDBlue;
    margin-top: -162px; // family nav
    padding-bottom: 0;
    width: 100%;
}

.container {
    .border-box();
    .font-size(22px);
    margin: 0 auto;
    padding-top: 90px;
    padding-bottom: 90px;
    width: @widthDesktop;

    h2, h3 {
        text-align: center;
    }
    h1 {
        color: #fff;
        .open-sans-light();
        .font-size(66px);
        line-height: 1.1;
        text-shadow: none;
        margin-bottom: 40px;
    }
    h2 {
        color: #652562;
        .open-sans();
        .font-size(48px);
        margin-bottom: 60px;
    }
    h3 {
        color: #652562;
        .font-size(25px);
        line-height: 1.2;
        margin: @baseLine auto;
    }
    p {
        color: @mozIDGrey;
        .open-sans-light();
        .font-size(20px);
    }
    ul {
        list-style-type: none;
        margin: 0;
    }
}

.footer {
    margin: 45px auto 0 auto ;
    text-align: center;
  
    a {
        display: none;
    }
    a:after {
        content:'»';
        white-space: nowrap;
    }
    strong {
        margin-bottom: 50px;
        display: block;
    }
    small {
        color: #56565a;
        .open-sans-italic();
        display: block;
        margin: auto;
    }
    .desktop-link {
        display: block;
    }
}

.button-flat-dark {
    .open-sans-light;
    .font-size(24px);
    padding: 12px @baseLine;
    .transition(background-color 250ms linear 0s);
}

.download-buttons  {
    p {
        color: #fff;
        .font-size(22px);
    } 
    .download-button small.download-other {
        color: #bee1f5;
        a {
            color: inherit;
        }
    }
}

/*-------------------------------------------------------------------------*/
// Main Sections 

.tracking-protection,
.when-to-use,
.control-center {
    h2 {
        margin-bottom: (@baseLine * 3);
        padding: 0 30px;
    }
    p {
        margin: @baseLine auto 0;
        padding: 0 15px;
    }
}

.intro {
    margin-top: 50px;

    header {
        float: left;
        padding-top: 80px;
        width: 490px;
    }
    .critter-animation {
        float: right;
        margin: 30px -85px 0 0; 
    }

    #tracking-protection-animation .shield-container {
        margin: 0 0 0 -25px
    }

    .ios & .critter-animation {
        margin: 30px 0 0 0; 
    }
}

.tracking-protection {
    background-color: #fff;
  
    h3 {
        .open-sans-extrabold();
        .font-size(30px);
        margin: 10px auto; 
    }
    .blurb {
        .at2x('/media/img/firefox/private-browsing/sprite-tracking-protection.png', 710px);
        background-repeat: no-repeat;
        display: inline-table;
        margin: 0 auto;
        padding-top: 210px;
        position: relative;
        text-align: center;
        vertical-align: top;
        width: 465px;
    } 
    .with-tracking {
        background-position: -410px 0;
    }
    .private-browsing {
        background-position: 135px 0;
        padding-right: 24px;
    }
    .private-browsing:after {
        color: #6fbf4a;
        content:'+';
        .open-sans-extrabold();
        .font-size(100px);
        height: 100px;
        width: 100px;
        position: absolute;
        right: -30px;
        top: 0;
    }
}

.when-to-use {
    background-color: #bee1f5;

    .container {
        padding-left: 0;
        padding-right: 0;
    }
    h3 {
        .open-sans();
        margin: 0px;
        padding: 0 15px;
        min-height: 95px;
    }
    li {
        float: left;
        margin: 0;
        text-align: center;
        width: 330px;
       
        p {
            .at2x('/media/img/firefox/private-browsing/sprite-features.png', 743px);
            background-repeat: no-repeat;
            background-position: -490px top;
            margin: 0 auto;
            padding: 165px 30px 0;
        }
    }
    li:first-child p {
        background-position: 90px top;
    }
    li:first-child + li p {
        background-position: -180px top;
    }
}

.control-center {
    .at2x('/media/img/firefox/private-browsing/control-center.png', 290px);
    background-position: center 90px;
    background-repeat: no-repeat;
    background-color: #fff;
    padding-top: 320px;
    text-align: center;

    p {
        .font-size(25px);
    }
    .footer a:after {
        content:'»';
        white-space: nowrap;
    }
}

.cta {
    h2 {
        color: #fff;
        float: left;
        margin: 0;
        text-shadow: none;
        text-align: left;
        width: 580px;
    }
    .download-buttons {
        float: left;
        width: 100%;

        .button-flat-dark,
        .dl-button,
        .desktop-download-button,
        .ios-download-button a {
            float: right;
        }
    }
}

#colophon {
    margin-top: 0;
}

html[lang^='de'],
html[lang^='pl'],
html[lang^='es-ES']{
    h1 {
        .font-size(55px);
    }
    .intro header {
        width: 535px;
    }
    .cta h2 {
        width: 550px; 
    }
}
html.ios[lang^='de'],
html.ios[lang^='pl'],
html.ios[lang^='es-ES']{
    .intro header {
        width: 465px;
    }
}
html[lang^='en'] {
    .button-flat-dark {
        text-transform: none;
        margin-bottom: 0;
    }
}

@media only screen and (max-width: @breakDesktop) {
    html[lang^='de'],
    html[lang^='pl'],
    html[lang^='es-ES']{
        h1 {
            .font-size(37px);
        }
        .intro header {
            width: 370px;
        }
        .cta h2 {
            width: 460px; 
        }
    }
    html.ios[lang^='de'],
    html.ios[lang^='pl'],
    html.ios[lang^='es-ES']{
        .intro header {
            width: 370px;
        }
    }
    html[lang^='pl'] {
         .cta h2 {
            width: 350px; 
        }
     }
    .button-flat-dark {
        .font-size(20px);
    }
    .container {
        width: @widthTablet;

        h1 {
            .font-size(44px);
        } 
        h2 {
            .font-size(38px);
            margin-bottom: 25px;
        }
        h3 {
            .font-size(19px);
        }
    }
    .intro {
        header {
            width: 370px;
        }
        .critter-animation {
           margin: 35px -20px 0 0; 
        }

        .download-buttons p {
            .font-size(16px);
        }
    }
    .tracking-protection {
        .blurb {
            width: 320px;
        }
        .with-tracking {
            background-position: -468px 0;
        }
        .private-browsing {
            background-position: 57px 0;
            padding-right: 70px;
        }
        .private-browsing:after {
            right: -18px;
        }
    }
    .when-to-use {
        h3 {
            min-height: 85px;
        }
        li {
            width: 250px;
            p {
                background-position: -530px top;
                .font-size(16px);
                padding-top: 160px;
            }
        }
        li:first-child p {
           background-position: 45px top;
        }
        li:first-child + li p {
           background-position: -215px top;
        }
    }
    .control-center p {
        .font-size(16px);
    }
    .cta {
        .container {
            padding-top: 75px;
            padding-bottom: 75px;
        }
        h2 {
            margin-bottom: 0;
        }
    }
}

@media only screen and (max-width: @breakTablet) {
    html[lang^='de'],
    html[lang^='pl'],
    html[lang^='es-ES']{
        h1 {
            .font-size(30px);
        }
        .intro header {
            width: 100%;
        }
        .cta h2 {
            width: 100%; 
        }
    }
    html.ios[lang^='de'],
    html.ios[lang^='pl'],
    html.ios[lang^='es-ES']{
        .intro header {
            width: 100%;
        }
    }
    html[lang^='pl']{
        .button-flat-dark {
            .font-size(16px);
        }
    }
    .button-flat-dark {
        .font-size(18px);
    }
    .container {
        width: @widthMobile;
        padding-top: 60px;
        padding-bottom: 60px;

        h1 {
            .font-size(32px);
        } 
        h2 {
            .font-size(30px);
        }
        h3 {
            .font-size(20px);
        }
        p {
            .font-size(16px);
        }
    }
    .tracking-protection,
    .when-to-use,
    .control-center {
        h2 {
            padding: 0 10px;
        } 
        p {
           padding: 0 10px; 
        }
    }
    .intro {
        header {
            clear: both;
            float: none;
            width: 100%;
        }
        .critter-animation {
            float: none;
            margin: 30px 0 0 0;
            clear: both;
        }
        h1, .download-buttons {
            text-align: center;
            width: 100%;
        }
       
    }
    .tracking-protection {
        h3 {
            .font-size(20px);
        }
        .blurb {
            display: block;
            width: 100%;
            padding-top: 200px;
        }
        .with-tracking {
            margin: 150px auto 0;
            background-position: -482px 0;
        }
        .private-browsing {
            padding-right: 0;
        }
        .private-browsing:after {
            bottom: -92px;
            right: 102px;
            top: 100%;
        }
    }
    .when-to-use {
        h3 {
            padding: 0 30px;
            margin-bottom: 20px;
            min-height: auto;
        }
        li {
            float: none;
            width: 100%;
            margin-bottom: 45px;

            p {
                background-position: -495px top;
                padding: 165px 35px 0;
            }
        }
        li:first-child p {
           background-position: 85px top;
        }
        li:first-child + li p {
           background-position: -185px top;
        }
    }
    .control-center {
        background-position: center 60px;
        .container {
            padding: 60px 10px;
        }        
    }
    .cta {
        h2 {
            .font-size(30px);
            float: none;
            margin-bottom: @baseLine;
            text-align: center;
        }
       
        .download-buttons {
            text-align: center;
            .button-flat-dark,
            .android-download-button a,
            .desktop-download-button,
            .ios-download-button a {
                float: none;
            }
        }
    }
}

@media only screen and (min-width: @breakMobile) and (max-width: @breakMobileLandscape) {
    .intro {
         #tracking-protection-animation .shield-container {
            margin: 0 auto; 
        }
    }
    .button-flat-dark {
        .font-size(@largeFontSize);
    }
    .container {
        width: @widthMobile;
    }
}

